# simple-aes-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AES.cpp  AES.h  Pkcs7Padding.cpp  Pkcs7Padding.h
test/: test_aes.cpp  test_pkcs7_padding.cpp  utils.cpp  utils.h
test/testfiles/: lorem.txt
